--- a/hands-on/TravelDestiny/.eslintrc.json
+++ b/hands-on/TravelDestiny/.eslintrc.json
@@ -9,5 +9,7 @@
         "sourceType": "module"
     },
     "plugins": ["react", "react-native"],
-    "rules": {}
+    "rules": {
+        "react/prop-types": "off"
+    }
 }
