--- a/hands-on/TravelDestiny/package.json
+++ b/hands-on/TravelDestiny/package.json
@@ -15,6 +15,7 @@
         "eslint-config-prettier": "^9.1.0",
         "react": "18.2.0",
         "react-native": "0.73.2",
+        "react-native-device-info": "^10.12.0",
         "react-native-gesture-handler": "^2.14.1",
         "react-native-navigation": "^7.37.2",
         "react-native-safe-area-context": "^4.8.2",
