--- a/hands-on/TravelDestiny/ios/Podfile
+++ b/hands-on/TravelDestiny/ios/Podfile
@@ -5,6 +5,7 @@ require Pod::Executable.execute_command('node', ['-p',
     {paths: [process.argv[1]]},
   )', __dir__]).strip
 
+min_ios_version_supported = '13.4'
 platform :ios, min_ios_version_supported
 prepare_react_native_project!
 
@@ -26,6 +27,10 @@ if linkage != nil
 end
 
 target 'TravelDestiny' do
+
+  rn_maps_path = '../node_modules/react-native-maps'
+  pod 'react-native-google-maps', :path => rn_maps_path
+
   config = use_native_modules!
 
   use_react_native!(
