--- a/hands-on/TravelDestiny/ios/TravelDestiny/Info.plist
+++ b/hands-on/TravelDestiny/ios/TravelDestiny/Info.plist
@@ -32,7 +32,7 @@
 		<true/>
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string>TravelDestiny asks to access your location to help you navigate the map.</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
