--- a/hands-on/TravelDestiny/package.json
+++ b/hands-on/TravelDestiny/package.json
@@ -20,7 +20,8 @@
         "react-native-maps": "^1.10.0",
         "react-native-navigation": "^7.37.2",
         "react-native-safe-area-context": "^4.8.2",
-        "react-native-screens": "^3.29.0"
+        "react-native-screens": "^3.29.0",
+        "react-native-share": "^10.0.2"
     },
     "devDependencies": {
         "@babel/core": "^7.20.0",
