--- a/hands-on/TravelDestiny/package.json
+++ b/hands-on/TravelDestiny/package.json
@@ -17,6 +17,7 @@
         "react-native": "0.73.2",
         "react-native-device-info": "^10.12.0",
         "react-native-gesture-handler": "^2.14.1",
+        "react-native-image-base64": "^0.1.4",
         "react-native-maps": "^1.10.0",
         "react-native-navigation": "^7.37.2",
         "react-native-safe-area-context": "^4.8.2",
