workday-recipes: implement splash screen

--- a/hands-on/workday-recipes/app.json
+++ b/hands-on/workday-recipes/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "workday-recipes",
+    "name": "Workday Recipes",
     "slug": "workday-recipes",
     "version": "1.0.0",
     "orientation": "portrait",
