--- a/hands-on/planify/package.json
+++ b/hands-on/planify/package.json
@@ -10,8 +10,18 @@
     "test": "jest"
   },
   "dependencies": {
+    "@babel/eslint-parser": "^7.23.10",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/stack": "^6.3.20",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-native": "^4.1.0",
     "react": "18.2.0",
-    "react-native": "0.73.3"
+    "react-native": "0.73.3",
+    "react-native-gesture-handler": "^2.15.0",
+    "react-native-navigation": "^7.37.2",
+    "react-native-safe-area-context": "^4.9.0",
+    "react-native-screen": "^1.0.1",
+    "react-native-screens": "^3.29.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
