--- a/hands-on/planify/package.json
+++ b/hands-on/planify/package.json
@@ -17,6 +17,7 @@
     "eslint-plugin-react-native": "^4.1.0",
     "react": "18.2.0",
     "react-native": "0.73.3",
+    "react-native-device-info": "^10.12.0",
     "react-native-gesture-handler": "^2.15.0",
     "react-native-navigation": "^7.37.2",
     "react-native-safe-area-context": "^4.9.0",
