--- a/hands-on/planify/ios/Podfile
+++ b/hands-on/planify/ios/Podfile
@@ -27,6 +27,9 @@ end
 
 target 'planify' do
   config = use_native_modules!
+  use_frameworks! :linkage => :static
+
+  $RNFirebaseAsStaticFramework = true
 
   use_react_native!(
     :path => config[:reactNativePath],
@@ -34,7 +37,7 @@ target 'planify' do
     #
     # Note that if you have use_frameworks! enabled, Flipper will not work and
     # you should disable the next line.
-    :flipper_configuration => flipper_config,
+    # :flipper_configuration => flipper_config,
     # An absolute path to your application root.
     :app_path => "#{Pod::Config.instance.installation_root}/.."
   )
