--- a/hands-on/planify/package.json
+++ b/hands-on/planify/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@babel/eslint-parser": "^7.23.10",
+    "@react-native-firebase/app": "^18.8.0",
+    "@react-native-firebase/auth": "^18.8.0",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
     "eslint-plugin-react": "^7.33.2",
