--- a/hands-on/planify/package.json
+++ b/hands-on/planify/package.json
@@ -13,6 +13,8 @@
     "@babel/eslint-parser": "^7.23.10",
     "@react-native-firebase/app": "^18.8.0",
     "@react-native-firebase/auth": "^18.8.0",
+    "@react-navigation/bottom-tabs": "^6.5.11",
+    "@react-navigation/drawer": "^6.6.6",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
     "eslint-plugin-react": "^7.33.2",
@@ -22,8 +24,8 @@
     "react-native-device-info": "^10.12.0",
     "react-native-gesture-handler": "^2.15.0",
     "react-native-navigation": "^7.37.2",
+    "react-native-reanimated": "^3.6.2",
     "react-native-safe-area-context": "^4.9.0",
-    "react-native-screen": "^1.0.1",
     "react-native-screens": "^3.29.0"
   },
   "devDependencies": {
@@ -40,7 +42,8 @@
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
-    "react-test-renderer": "18.2.0"
+    "react-test-renderer": "18.2.0",
+    "metro-react-native-babel-preset": "0.72.3"
   },
   "engines": {
     "node": ">=18"
